# ollama-tools

./: .gitignore  .python-version  API_REFERENCE.md  ARCHITECTURE.md  README.md  SETUP.md  docker-compose.yml  main.py  notes.txt  pyproject.toml
tools/: __init__.py  config.py  file_operations.py  read_file.py
