[project]
name = "ollama-tools"
version = "0.1.0"
description = ""
authors = [
    {name = "JWilson45",email = "jason.wilson2@marist.edu"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "ollama (>=0.5.3,<0.6.0)",
    "requests (>=2.32.4,<3.0.0)"
]

[tool.poetry]
package-mode = false

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
